--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <h1 class="hh">WANNA KNOW MORE ABOUT US?</h1>
             <h1>CHECK DOWN HERE</h1>
             <div class="circle" id="circle">
-                <a href="sites/keera.html" class="item">KEERA</a>
-                <a href="sites/max.html" class="item">MAX</a>
-                <a href="sites/kilwa.html" class="item">KILWA</a>
-                <a href="sites/amigo.html" class="item">AMIGO</a>
-                <a href="sites/seheba.html" class="item">SEHEBA</a>
-                <a href="sites/al3bd.html" class="item">AL3BD</a>
-                <a href="sites/nyle.html" class="item">NYLE</a>
-                <a href="sites/khaled.html" class="item">KHALED</a>
+                <a href="loader/keeral.html" class="item">KEERA</a>
+                <a href="loader/maxl.html" class="item">MAX</a>
+                <a href="loader/kilwal.html" class="item">KILWA</a>
+                <a href="loader/amigol.html" class="item">AMIGO</a>
+                <a href="loader/sehl.html" class="item">SEHEBA</a>
+                <a href="loader/al3bdl.html" class="item">AL3BD</a>
+                <a href="loader/nylel.html" class="item">NYLE</a>
+                <a href="loader/khaledl.html" class="item">KHALED</a>
             </div>
         </div>
     </div>
