--- a/sites/nyle.html
+++ b/sites/nyle.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <h1>i'm Nyle</h1>
-        <img class="mainimg" src="imgs/char/strapless-bra.png" alt="">
-        <h2 class="main-speach">the boob's guy  <img class="hacker" src="imgs/char/strapless-bra.png" alt=""> <span> at  this group</span></h2>
+        <img class="mainimg" src="imgs/char" alt="">
+        <h2 class="main-speach">the chill guy at  this group</h2>
         <h2>  </h2>
         <h3>my instagram  </h3>
         <a href="https://www.instagram.com/sn4yl?igsh=MXA5YmgycTU1b2p3cw=="><img src="imgs/social/instagram.png" alt=""></a>
