--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="upper">
             <h2>We are gym rats</h2>
             <img src="imgs/char/weight.png" class="mainimg">
-            <h1 class="hh">WANNA KNOW MORE ABOUT US?</h1>
+            <h1 class="hh">WANNA KNOW MORE ?</h1>
             <h1>CHECK DOWN HERE</h1>
             <div class="circle" id="circle">
                 <a href="loader/keeral.html" class="item">KEERA</a>
