--- a/sites/amigo.html
+++ b/sites/amigo.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>i'm Amigo</h1>
         <img class="mainimg" src="imgs/char/comedy.png" alt="">
-        <h2 class="main-speach" style="text-wrap: wrap;">the comedian <img class="hacker" src="imgs/char/comedy (1).png" style="height: 40%;"> <span>of this group</span></h2>
+        <h2 class="main-speach" style="text-wrap: wrap;">the comedian <img class="hacker" src="imgs/char/comedy (1).png"> <span>of this group</span></h2>
         <h2></h2>
         <h3>my instagram  </h3>
         <a href="https://www.instagram.com/alam.in_19?igsh=MXA5YmgycTU1b2p3cw=="><img src="imgs/social/instagram.png" alt=""></a>
