--- a/sites/khaled.html
+++ b/sites/khaled.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>i'm Khaled</h1>
         <img class="mainimg" src="imgs/char/approach.png" alt="">
-        <h2 class="main-speach" style="text-wrap: wrap;">the troubles maker <img class="hacker" src="imgs/char/muay-thai.png" style="height: 60%;"> <span> of this group</span></h2>
+        <h2 class="main-speach" style="text-wrap: wrap;">the troubles maker <img class="hacker" src="imgs/char/muay-thai.png"> <span> of this group</span></h2>
         <h2>  </h2>
         <h3>my instagram  </h3>
         <a href="https://www.instagram.com/8.1p1?igsh=MXA5YmgycTU1b2p3cw=="><img src="imgs/social/instagram.png" alt=""></a>
