--- a/loader/khaledl.html
+++ b/loader/khaledl.html
@@ -9,9 +9,7 @@
 <body>
     <div class="container">
         <span>loading</span>
-        <div class="loader">
-        
-        </div>
+        <div class="loader"></div>
     </div>
 
       <script>
