--- a/loader/keeral.html
+++ b/loader/keeral.html
@@ -15,10 +15,9 @@
     </div>
 
       <script>
-    // بعد 3 ثواني، يحولك للصفحة الرئيسية
     setTimeout(function() {
-      window.location.href = "../sites/keera.html"; // غيّرها لمسار الصفحة الحقيقية
-    }, 3000);
+      window.location.href = "../sites/keera.html";
+    }, 1000);
   </script>
 </body>
 </html>
