--- a/loader/khaledl.html
+++ b/loader/khaledl.html
@@ -13,10 +13,9 @@
     </div>
 
       <script>
-    // بعد 3 ثواني، يحولك للصفحة الرئيسية
     setTimeout(function() {
-      window.location.href = "../sites/khaled.html"; // غيّرها لمسار الصفحة الحقيقية
-    }, 3000);
+      window.location.href = "../sites/khaled.html";
+    }, 1000);
   </script>
 </body>
 </html>
