--- a/sites/max.html
+++ b/sites/max.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="all.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="imgs/char/max.png" type="image/x-icon">
+    <title>Max</title>
 </head>
 <body>
     <div class="container">
